Improve parsing of items hovers, add wrapper lookup context, fix emojis counting as two characters, expose keyed maps in String Args, facing placeholders